2006-12-05  Frank Ch. Eigler  <fche@redhat.com>

PR 3648
	* main.cxx (main): Tweak error message for tapset script execution.
	Also catch those clever rogues who use stdin.